# PasteSheets

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: DetailModal.svelte  DirectoryView.svelte  Header.svelte  HistoryItem.svelte  ItemView.svelte  Modal.svelte  SearchView.svelte  SettingsView.svelte
frontend/src/lib/ui/: Button.svelte  ContextMenu.svelte  Input.svelte  Toggle.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/modules/: clipboard.rs  db.rs  hotkey.rs  mod.rs  window_manager.rs
view/: index.html  script.js  style.css
