[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
arboard = "3.0"
tauri-plugin-global-shortcut = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
dirs = "5.0"
tauri = { version = "2.9.4", features = ["macos-private-api"] }
tauri-plugin-log = "2"
once_cell = "1.21.3"
enigo = "0.3.0"

