
[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["newfull5"]
license = "Apache-2.0"
repository = "https://github.com/newfull5/PasteSheets"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }


[dependencies]
arboard = "3.0"
tauri-plugin-global-shortcut = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
dirs = "5.0"
tauri = { version = "2.9.4", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
once_cell = "1.21.3"
enigo = "0.6"
active-win-pos-rs = "0.8"
cocoa = "0.24"
objc = "0.2"
core-foundation = "0.9"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc-foundation = "0.1"
